--- a/vercel.json
+++ b/vercel.json
@@ -1,26 +1,16 @@
 {
     "version": 2,
-    "builds": [
-        {
-            "src": "frontend/package.json",
-            "use": "@vercel/static-build",
-            "config": {
-                "distDir": "frontend/dist"
-            }
-        },
-        {
-            "src": "backend/server.ts",
-            "use": "@vercel/node"
+    "buildCommand": "npm run build",
+    "outputDirectory": "frontend/dist",
+    "functions": {
+        "backend/server.ts": {
+            "runtime": "nodejs18.x"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/api/(.*)",
             "dest": "backend/server.ts"
-        },
-        {
-            "src": "/(.*)",
-            "dest": "frontend/dist/$1"
         }
     ]
 }
