--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
         {
             "src": "/api/(.*)",
             "dest": "backend/server.ts"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
