Fix static file routing in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
             "dest": "backend/server.ts"
         },
         {
+            "src": "/(.*\\.(js|css|svg|png|jpg|jpeg|gif|ico|woff|woff2|ttf|eot))",
+            "dest": "/$1"
+        },
+        {
             "src": "/(.*)",
             "dest": "/index.html"
         }
